--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -48,3 +48,11 @@ body::-webkit-scrollbar-thumb {
   border-radius: 20px;
   border: 3px solid #8f8786;
 }
+
+.container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  padding: 64px 0;
+}
